--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,67 @@
-/venv
+/foto
+
+# Python-related
+*.pyc
+__pycache__/
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+*.pyc
+
+/env
+*.env
+.vscode
+# Virtual environment
+venv/
+env/
+.Python
+
+# Local development settings
+*.env
+*.log
+*.db.sqlite3
+local_settings.py
+
+# Editor and IDE files
+.vscode/
+.idea/
+
+# Dependency directories
+node_modules/
+bower_components/
+
+# Compiled and built files
+__pycache__/
+*.py[cod]
+
+# Environment variables
+*.env
+
+# Compiled Python files
+*.pyc
+
+# Compiled Python files
+*.pyc
+__pycache__/
+
+# Django and Django Rest Framework specific files
+*.log
+db.sqlite3
+db.sqlite3-journal
+*.key
+*.crt
+*.csr
+
+# Compiled Python files
+*.pyc
+*.pyo
+__pycache__/
+
+# Compiled C extensions
+*.so
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
