--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ migrations/
 
 # Игнорировать файлы статических ресурсов (если не используется стороннее хранилище)
 
-# Игнорировать локальные настройки, если они сохранены в файле settings_local.py
-settings_local.py
+# Игнорировать локальные настройки, если они сохранены в файле local_setings.py
+local_setings.py
 
 # Игнорировать файлы окружения (например, .env, .env.local)
 .env*
