--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Игнорировать файлы, созданные системой операционной системы
 .DS_Store
+help_comands.txt
 
 # Игнорировать кэш и временные файлы Python
 __pycache__/
